--- a/source/form.html
+++ b/source/form.html
@@ -22,7 +22,7 @@
             <a class="main-nav__link" href="catalog.html">Каталог продукции</a>
           </li>
           <li class="main-nav__item">
-            <a class="main-nav__link main-nav__link--active"">Подбор программы</a>
+            <a class="main-nav__link main-nav__link--active">Подбор программы</a>
           </li>
         </ul>
       </nav>
@@ -113,42 +113,42 @@
     </main>
 
     <footer class="page-footer">
-        <h2 class="visually-hidden">Контакты</h2>
-        <div class="page-footer__contacts contacts">
-          <p class="contacts__text">Приглашаем к сотрудничеству дилеров!</p>
-          <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      <h2 class="visually-hidden">Контакты</h2>
+      <div class="page-footer__contacts contacts">
+        <p class="contacts__text">Приглашаем к сотрудничеству дилеров!</p>
+        <p class="contacts__address">ул. Большая Конюшенная, д. 19/8 Санкт-Петербург</p>
+      </div>
+
+      <div class="page-footer__map">
+        <img src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Местонахождение магазина на карте">
+      </div>
+
+      <div class="page-footer__wrapper">
+        <a class="page-footer__logo logo-footer">
+          <img class="page-footer__logo-image" width="128" height="24" src="img/logo-footer.svg" alt="Логотип компании Cat Energy">
+        </a>
+
+        <div class="page-footer__social social">
+          <ul class="social__list">
+            <li class="social__item">
+              <a class="social__link social__link--vkontakte" href="#vkontakte"><span class="visually-hidden">Мы в Вконтакте</span></a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--instagram" href="#instagram"><span class="visually-hidden">Мы в инстаграме</span></a>
+            </li>
+            <li class="social__item">
+              <a class="social__link social__link--facebook" href="#facebook"><span class="visually-hidden">Мы в Фейсбуке</span></a>
+            </li>
+          </ul>
         </div>
 
-        <div class="page-footer__map">
-          <img src="img/bg-map-mobile@1x.png" width="320" height="400" alt="Местонахождение магазина на карте">
-        </div>
-
-        <div class="footer__wrapper">
-          <a class="page-footer__logo logo-footer">
-            <img class="page-footer__logo-image" width="128" height="24" src="img/logo-footer.svg" alt="Логотип компании Cat Energy">
+        <div class="page-footer__copyright copyright">
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
+          <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
+            <img src="img/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy">
           </a>
-
-          <div class="page-footer__social social">
-            <ul class="social__list">
-              <li class="social__item">
-                <a class="social__link social__link--vkontakte" href="#vkontakte"><span class="visually-hidden">Мы в Вконтакте</span></a>
-              </li>
-              <li class="social__item">
-                <a class="social__link social__link--instagram" href="#instagram"><span class="visually-hidden">Мы в инстаграме</span></a>
-              </li>
-              <li class="social__item">
-                <a class="social__link social__link--facebook" href="#facebook"><span class="visually-hidden">Мы в Фейсбуке</span></a>
-              </li>
-            </ul>
-          </div>
-
-          <div class="page-footer__copyright copyright">
-            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">HTML Academy</a>
-            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive">
-              <img src="img/htmlacademy.svg" width="27" height="34" alt="Логотип HTML Academy">
-            </a>
-          </div>
         </div>
-      </footer>
+      </div>
+    </footer>
   </body>
 </html>
