--- a/source/index.html
+++ b/source/index.html
@@ -75,20 +75,24 @@
       </section>
 
       <section class="example">
-        <!-- <div class="container"> -->
+        <div class="example__wrapper">
           <div class="example__wrapper-big">
             <h2 class="example__title">Живой пример</h2>
             <p class="example__text">Борис сбросил 5 кг за 2 месяца, просто заменив свой обычный корм на Cat Energy Slim. Отличный результат без изнуряющих тренировок! При этом он не менял своих привычек и по-прежнему спит по 16 часов в день.</p>
             <div class="example__wrapper-small">
-              <p class="example__weight">
-                <span class="example__value">5 кг</span>
-                <span class="example__parameter">снижение веса</span>
+              <ul class="example__list">
+                <li class="example__item example__weight">
+                  <span class="example__value">5 кг</span>
+                  <span class="example__parameter">снижение веса</span>
+                </li>
+                <li class="example__item example__period">
+                  <span class="example__value">60 дней</span>
+                  <span class="example__parameter">затрачено времени</span>
+                </li>
+              </ul>
+              <p class="example__description">
+                <span class="example__description-text">Затраты на питание:</span><span class="example__description-number"> 15 000 руб.</span>
               </p>
-              <p class="example__period">
-                <span class="example__value">60 дней</span>
-                <span class="example__parameter">затрачено времени</span>
-              </p>
-              <p class="example__description">Затраты на питание: 15 000 руб.</p>
             </div>
           </div>
           <div class="example__wrapper-big">
@@ -99,7 +103,7 @@
               <button class="example__toggle" type="button">Стало</button>
             </p>
           </div>
-        <!-- </div> -->
+        </div>
       </section>
     </main>
 
