--- a/source/catalog.html
+++ b/source/catalog.html
@@ -63,130 +63,149 @@
             </div>
           </li>
           <li class="catalog__item item">
-            <a class="item__link" href="#item">
-              <img class="item__picture" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
-              <h3 class="item__caption">Cat Energy PRO 1000 г</h3>
-            </a>
-            <table class="item__table table">
-              <tr>
-                <td class="table__parameter">Объем</td>
-                <td class="table__value">1000 г</td>
-              </tr>
-              <tr>
-                <td class="table__parameter">Вкус</td>
-                <td class="table__value">Курица</td>
-              </tr>
-              <tr>
-                <td class="table__parameter">Цена</td>
-                <td class="table__value">1000 Р.</td>
-              </tr>
-            </table>
-            <a class="item__order button" href="#item-basket">Заказать</a>
+            <div class="item__wrapper">
+              <div class="item__wrapper-inner">
+                <a href="#item">
+                  <img class="item__picture" src="img/chicken-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+                </a>
+                <div class="item__wrapper-caption">
+                  <a href="#item">
+                    <h3 class="item__caption">Cat Energy PRO 1000 г</h3>
+                  </a>
+                  <table class="item__table table">
+                    <tr>
+                      <td class="table__parameter">Объем</td>
+                      <td class="table__value">1000 г</td>
+                    </tr>
+                    <tr>
+                      <td class="table__parameter">Вкус</td>
+                      <td class="table__value">Курица</td>
+                    </tr>
+                    <tr>
+                      <td class="table__parameter">Цена</td>
+                      <td class="table__value">1000 Р.</td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
+              <a class="item__order button" href="#item-basket">Заказать</a>
+            </div>
           </li>
           <li class="catalog__item item">
-            <a class="item__link" href="#item">
-              <img class="item__picture" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
-              <h3 class="item__caption">Cat Energy PRO 500 г</h3>
-            </a>
-            <table class="item__table table">
-              <tr>
-                <td class="table__parameter">Объем</td>
-                <td class="table__value">500 г</td>
-              </tr>
-              <tr>
-                <td class="table__parameter">Вкус</td>
-                <td class="table__value">Рыба</td>
-              </tr>
-              <tr>
-                <td class="table__parameter">Цена</td>
-                <td class="table__value">700 Р.</td>
-              </tr>
-            </table>
-            <a class="item__order button" href="#item-basket">Заказать</a>
+            <div class="item__wrapper">
+              <div class="item__wrapper-inner">
+                <a href="#item">
+                  <img class="item__picture" src="img/fish-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+                </a>
+                <div class="item__wrapper-caption">
+                  <a href="#item">
+                    <h3 class="item__caption">Cat Energy PRO 500 г</h3>
+                  </a>
+                  <table class="item__table table">
+                    <tr>
+                      <td class="table__parameter">Объем</td>
+                      <td class="table__value">500 г</td>
+                    </tr>
+                    <tr>
+                      <td class="table__parameter">Вкус</td>
+                      <td class="table__value">Рыба</td>
+                    </tr>
+                    <tr>
+                      <td class="table__parameter">Цена</td>
+                      <td class="table__value">700 Р.</td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
+              <a class="item__order button" href="#item-basket">Заказать</a>
+            </div>
           </li>
           <li class="catalog__item item">
-            <a class="item__link" href="#item">
-              <img class="item__picture" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
-              <h3 class="item__caption">Cat Energy PRO 1000 г</h3>
-            </a>
-            <table class="item__table table">
-              <tr>
-                <td class="table__parameter">Объем</td>
-                <td class="table__value">1000 г</td>
-              </tr>
-              <tr>
-                <td class="table__parameter">Вкус</td>
-                <td class="table__value">Рыба</td>
-              </tr>
-              <tr>
-                <td class="table__parameter">Цена</td>
-                <td class="table__value">1000 Р.</td>
-              </tr>
-            </table>
-            <a class="item__order button" href="#item-basket">Заказать</a>
+            <div class="item__wrapper">
+              <div class="item__wrapper-inner">
+                <a href="#item">
+                  <img class="item__picture" src="img/fish-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+                </a>
+                <div class="item__wrapper-caption">
+                  <a href="#item">
+                    <h3 class="item__caption">Cat Energy PRO 1000 г</h3>
+                  </a>
+                  <table class="item__table table">
+                    <tr>
+                      <td class="table__parameter">Объем</td>
+                      <td class="table__value">1000 г</td>
+                    </tr>
+                    <tr>
+                      <td class="table__parameter">Вкус</td>
+                      <td class="table__value">Рыба</td>
+                    </tr>
+                    <tr>
+                      <td class="table__parameter">Цена</td>
+                      <td class="table__value">1000 Р.</td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
+              <a class="item__order button" href="#item-basket">Заказать</a>
+            </div>
           </li>
           <li class="catalog__item item">
-            <a class="item__link" href="#item">
-              <img class="item__picture" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 500 г">
-              <h3 class="item__caption">Cat Energy Slim 500 г</h3>
-            </a>
-            <table class="item__table table">
-              <tr>
-                <td class="table__parameter">Объем</td>
-                <td class="table__value">500 г</td>
-              </tr>
-              <tr>
-                <td class="table__parameter">Вкус</td>
-                <td class="table__value">Гречка</td>
-              </tr>
-              <tr>
-                <td class="table__parameter">Цена</td>
-                <td class="table__value">400 Р.</td>
-              </tr>
-            </table>
-            <a class="item__order button" href="#item-basket">Заказать</a>
+            <div class="item__wrapper">
+              <div class="item__wrapper-inner">
+                <a href="#item">
+                  <img class="item__picture" src="img/buckwheat-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 500 г">
+                </a>
+                <div class="item__wrapper-caption">
+                  <a href="#item">
+                    <h3 class="item__caption">Cat Energy PRO 500 г</h3>
+                  </a>
+                  <table class="item__table table">
+                    <tr>
+                      <td class="table__parameter">Объем</td>
+                      <td class="table__value">500 г</td>
+                    </tr>
+                    <tr>
+                      <td class="table__parameter">Вкус</td>
+                      <td class="table__value">Гречка</td>
+                    </tr>
+                    <tr>
+                      <td class="table__parameter">Цена</td>
+                      <td class="table__value">400 Р.</td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
+              <a class="item__order button" href="#item-basket">Заказать</a>
+            </div>
           </li>
           <li class="catalog__item item">
-            <a class="item__link" href="#item">
-              <img class="item__picture" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 1000 г">
-              <h3 class="item__caption">Cat Energy Slim 1000 г</h3>
-            </a>
-            <table class="item__table table">
-              <tr>
-                <td class="table__parameter">Объем</td>
-                <td class="table__value">1000 г</td>
-              </tr>
-              <tr>
-                <td class="table__parameter">Вкус</td>
-                <td class="table__value">Гречка</td>
-              </tr>
-              <tr>
-                <td class="table__parameter">Цена</td>
-                <td class="table__value">700 Р.</td>
-              </tr>
-            </table>
-            <a class="item__order button" href="#item-basket">Заказать</a>
-          </li>
-          <li class="catalog__item item">
-            <a class="item__link" href="#item">
-              <img class="item__picture" src="img/rice-small-mobile@1x.jpg" width="140" height="144" alt="Cat Energy Slim 500 г">
-              <h3 class="item__caption">Cat Energy Slim 500 г</h3>
-            </a>
-            <table class="item__table table">
-              <tr>
-                <td class="table__parameter">Объем</td>
-                <td class="table__value">500 г</td>
-              </tr>
-              <tr>
-                <td class="table__parameter">Вкус</td>
-                <td class="table__value">Рис</td>
-              </tr>
-              <tr>
-                <td class="table__parameter">Цена</td>
-                <td class="table__value">500 Р.</td>
-              </tr>
-            </table>
-            <a class="item__order button" href="#item-basket">Заказать</a>
+            <div class="item__wrapper">
+              <div class="item__wrapper-inner">
+                <a href="#item">
+                  <img class="item__picture" src="img/buckwheat-big-mobile@1x.jpg" width="140" height="144" alt="Cat Energy PRO 1000 г">
+                </a>
+                <div class="item__wrapper-caption">
+                  <a href="#item">
+                    <h3 class="item__caption">Cat Energy PRO 1000 г</h3>
+                  </a>
+                  <table class="item__table table">
+                    <tr>
+                      <td class="table__parameter">Объем</td>
+                      <td class="table__value">1000 г</td>
+                    </tr>
+                    <tr>
+                      <td class="table__parameter">Вкус</td>
+                      <td class="table__value">Гречка</td>
+                    </tr>
+                    <tr>
+                      <td class="table__parameter">Цена</td>
+                      <td class="table__value">700 Р.</td>
+                    </tr>
+                  </table>
+                </div>
+              </div>
+              <a class="item__order button" href="#item-basket">Заказать</a>
+            </div>
           </li>
           <li class="catalog__item item">
             <h3 class="item__caption">Показать еще 100500 товаров</h3>
