--- a/source/catalog.html
+++ b/source/catalog.html
@@ -217,6 +217,7 @@
 
       <section class="additional">
         <h2 class="additional__title">Дополнительные товары</h2>
+        <div class="additional__wrapper">
           <ul class="additional__list">
             <li class="additional__item">
               <div class="additional__wrapper-item">
@@ -256,6 +257,7 @@
           <div class="additional__offer">
             <p class="additional__offer-title">Закажите все и получите чехол для кота в подарок!</p>
           </div>
+        </div>
       </section>
     </main>
 
