--- a/source/catalog.html
+++ b/source/catalog.html
@@ -230,26 +230,32 @@
               <a class="additional__order button" href="#item-basket">Заказать</a>
             </li>
             <li class="additional__item">
-              <div class="additional__item-wrapper">
+              <div class="additional__wrapper-item">
                 <h3 class="additional__caption">Питьевая вода</h3>
-                <p class="additional__volume">5 литров</p>
-                <p class="additional__price">50 Р.</p>
+                <p class="additional__wrapper-cost">
+                  <span class="additional__volume">5 литров</span>
+                  <span class="additional__price">50 Р.</span>
+                </p>
               </div>
               <a class="additional__order button" href="#item-basket">Заказать</a>
             </li>
             <li class="additional__item">
-              <div class="additional__item-wrapper">
+              <div class="additional__wrapper-item">
                 <h3 class="additional__caption">Молоко</h3>
-                <p class="additional__volume">1 литр</p>
-                <p class="additional__price">100 Р.</p>
+                <p class="additional__wrapper-cost">
+                  <span class="additional__volume">1 литр</span>
+                  <span class="additional__price">100 Р.</span>
+                </p>
               </div>
               <a class="additional__order button" href="#item-basket">Заказать</a>
             </li>
             <li class="additional__item">
-              <div class="additional__item-wrapper">
+              <div class="additional__wrapper-item">
                 <h3 class="additional__caption">Витамины</h3>
-                <p class="additional__volume">1 упаковка (30 г)</p>
-                <p class="additional__price">300 Р.</p>
+                <p class="additional__wrapper-cost">
+                  <span class="additional__volume">1 упаковка (30 г)</span>
+                  <span class="additional__price">300 Р.</span>
+                </p>
               </div>
               <a class="additional__order button" href="#item-basket">Заказать</a>
             </li>
